Fixed some layout bugs

--- a/style.css
+++ b/style.css
@@ -83,10 +83,11 @@ body
 .gameList
 {
   color: #949494;
-  width: calc(100% - 10px);
+  width: calc(100% - 0px); //was -10px
   //height: 2000px;
-  line-height: 50px;
+  //line-height: 50px;
   text-align: center;
+  //padding-left:10%;
   opacity:0.95;
   z-index:100;
 }
@@ -98,7 +99,7 @@ body
   width: 200px;
   margin-left: 10px;
   margin-right: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .GameJamOverlay
@@ -134,6 +135,7 @@ h1
   padding:0;
   height: 40px;
   width: 100vw;
+  line-height: 40px;
 
   display:block;
   margin:auto;
